# ragu

./: Cargo.toml  README.md  _typos.toml  justfile  rust-toolchain.toml
.claude/book-review/: prose.md  standards.md
.claude/code-review/: documentation.md  standards.md
.claude/skills/clean-circuits/: SKILL.md
.claude/skills/fv-docs/: SKILL.md
.claude/skills/fv-review/: SKILL.md
.github/actions/rust-setup/: action.yml
.github/workflows/: bench.yml  debug.yml  fuzz-coverage.yml  fuzz-cron.yml  fv.yml  lint.yml  notify-website.yml  rust.yml  vet.yml  zizmor.yml
book/: book.toml  macros.txt
book/src/: SUMMARY.md  introduction.md
book/src/appendix/: terminology.md
book/src/design/circuits/: constraints.md
book/src/development/drivers/: emulator.md
book/src/guide/: configuration.md  drivers.md  getting_started.md  requirements.md  routines.md  writing_circuits.md
book/src/guide/drivers/: index.md  linear.md  witness.md
book/src/guide/gadgets/: conversion.md  demotion.md  gadgetkind.md  index.md  kind.md
book/src/implementation/: arch.md  circuits.md  proofs.md  routines.md  staging.md
book/src/implementation/drivers/: custom.md  emulator.md
book/src/protocol/: analysis.md  index.md
book/src/protocol/core/: arithmetization.md  nark.md
book/src/protocol/extensions/: endoscalar.md  mesh.md  registry.md  staging.md
book/src/protocol/local/: arithmetization.md  overview.md  wiring.md
crates/ragu/: Cargo.toml
crates/ragu_arithmetic/: Cargo.toml
crates/ragu_arithmetic/benches/: arithmetic.rs
crates/ragu_arithmetic/benches/setup/: mod.rs
crates/ragu_arithmetic/src/: coeff.rs  domain.rs  fft.rs  lib.rs  multicore.rs  parallel.rs  uendo.rs  uint136.rs  util.rs
crates/ragu_circuits/: Cargo.toml
crates/ragu_circuits/benches/: circuits.rs
crates/ragu_circuits/benches/criterion/: trace.rs
crates/ragu_circuits/benches/setup/: mod.rs
crates/ragu_circuits/src/: floor_plan.rs  floor_planner.rs  ky.rs  lib.rs  mesh.rs  metrics.rs  raw.rs  registry.rs  routines.rs  rx.rs  trace.rs  trivial.rs
crates/ragu_circuits/src/composition/: endoscalar.rs  mod.rs  staging.rs  witnessed_endoscalar.rs
crates/ragu_circuits/src/polynomials/: mod.rs  structured.rs  txz.rs  unstructured.rs
crates/ragu_circuits/src/s/: common.rs  mod.rs  sx.rs  sxy.rs  sy.rs
crates/ragu_circuits/src/staging/: bonding.rs  builder.rs  extractor.rs  mask.rs  mod.rs  object.rs  rx_driver.rs
crates/ragu_circuits/src/test_fixtures/: mod.rs
crates/ragu_circuits/src/tests/: identity.rs  mod.rs  segment_order.rs  zero_product.rs
crates/ragu_circuits/src/wiring/: mod.rs  sx.rs  sxy.rs  sy.rs
crates/ragu_core/: Cargo.toml
crates/ragu_core/src/: allocator.rs  convert.rs  drivers.rs  errors.rs  gadgets.rs  lib.rs  routines.rs
crates/ragu_core/src/drivers/: emulator.rs  linexp.rs  phantom.rs  wireless.rs
crates/ragu_core/src/gadgets/: foreign.rs
crates/ragu_core/src/maybe/: always.rs  cast.rs  empty.rs  mod.rs
crates/ragu_core/src/perhaps/: always.rs  cast.rs  empty.rs  mod.rs
crates/ragu_gadgets/: Cargo.toml
crates/ragu_macros/: Cargo.toml
crates/ragu_macros/src/: gadget.rs  gadget_serialize.rs  helpers.rs  lib.rs  path_resolution.rs  substitution.rs
crates/ragu_macros/src/derive/: gadget.rs  gadgetequals.rs  gadgetserialize.rs  mod.rs
crates/ragu_macros/src/proc/: application.rs  maybe_cast.rs  mod.rs  perhaps_cast.rs
crates/ragu_macros/tests/: define_application.rs
crates/ragu_pasta/: Cargo.toml  build.rs  pasta_common.rs
crates/ragu_pasta/src/: lib.rs
crates/ragu_pcd/: Cargo.toml
crates/ragu_pcd/benches/: pcd.rs
crates/ragu_pcd/src/: fuse.rs  fuzz_utils.rs  header.rs  lib.rs  merge.rs  proof.rs  step.rs  value_accumulator.rs  verify.rs
crates/ragu_pcd/tests/: nontrivial.rs  registration_errors.rs  rerandomization.rs
crates/ragu_primitives/: Cargo.toml
crates/ragu_primitives/benches/: primitives.rs
crates/ragu_primitives/benches/setup/: mod.rs
crates/ragu_primitives/src/: allocator.rs  boolean.rs  comparison.rs  consistent.rs  demoted.rs  element.rs  endoscalar.rs  fixedvec.rs  foreign.rs  fv_utils.rs  invertible.rs  io.rs  lib.rs  point.rs  poseidon.rs  promotion.rs  serialize.rs  simulator.rs  suffix.rs  util.rs  vec.rs
crates/ragu_primitives/src/io/: pipe.rs
crates/ragu_testing/: Cargo.toml
crates/ragu_testing/fuzz/: Cargo.toml  dict.txt  fuzz.sh
crates/ragu_testing/src/: lib.rs  recorder.rs  substrate.rs
crates/ragu_testing/tests/: completeness.rs  constraint_deletion.rs  fold_advice.rs  idioms.rs  playback.rs  vacuity.rs  zero_crossing.rs
fv/crates/lean_extraction/: Cargo.toml
fv/docs/: book.toml
fv/docs/src/: SUMMARY.md
fv/docs/theme/: header.hbs
fv/lean/: Ragu.lean  lake-manifest.json
fv/lean/Ragu/: Core.lean
qa/crates/lean_extraction/: Cargo.toml
qa/fuzz/: .gitignore  Cargo.toml  README.md  dict.txt  fuzz.sh
qa/fuzz/fuzz_targets/: fuzz_advice_patcher.rs  fuzz_algebraic_identities.rs  fuzz_circuit_cheat.rs  fuzz_circuit_revdot_identity.rs  fuzz_circuit_witness.rs  fuzz_completeness.rs  fuzz_consistent.rs  fuzz_driver_metamorphic.rs  fuzz_element_assertions.rs  fuzz_element_ops.rs  fuzz_endoscalar.rs  fuzz_fold_revdot.rs  fuzz_io_roundtrip.rs  fuzz_multipack.rs  fuzz_point_identities.rs  fuzz_poseidon_differential.rs  fuzz_poseidon_sponge.rs  fuzz_revdot.rs  fuzz_soundness_cheat.rs  fuzz_staging.rs  fuzz_sxy_agreement.rs  fuzz_verify_reject.rs  fuzz_witness_cheat.rs  fuzz_witness_coverage.rs  fuzz_witness_pinning.rs
qa/fuzz/src/: lib.rs
qa/lean/: Ragu.lean  lake-manifest.json  lakefile.lean
qa/lean/Ragu/: CircuitFlattening.lean  Contrib.lean  Core.lean  Fingerprint.lean  Instances.lean
qa/supply-chain/: audits.toml  config.toml
src/: application.rs  header.rs  lib.rs  polynomial.rs  proof.rs  relations.rs  step.rs
src/mock/: application.rs  constraint.rs  ctx.rs  domain.rs  header.rs  hooks.rs  mod.rs  polynomial.rs  proof.rs  relations.rs  sponge.rs  step.rs
src/mock/tests/: application.rs  constraint.rs  mod.rs  relations.rs  sponge.rs
src/tests/: application.rs  proof.rs  relations.rs
(+291 files in other folders)
