[package]
name = "ragu"
version.workspace = true
authors.workspace = true
description = """
Proof-carrying data (PCD) framework for Rust
"""
license.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ragu"
categories = ["cryptography", "mathematics", "algorithms", "science", "no-std"]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
no-default-features = true
features = ["legacy-deps", "multicore", "mock"]

[features]
default = ["modern-deps", "multicore"]
# Opt-in API-level mock of `ragu_pcd` (see the crate docs). Off by default.
mock = [
  "dep:blake2b_simd",
  "dep:ragu_arithmetic",
  "dep:ragu_circuits",
  "dep:ragu_core",
  "dep:ragu_pasta",
  "dep:ragu_pcd",
  "dep:ragu_primitives",
]
modern-deps = [
  "ragu_arithmetic?/modern-deps",
  "ragu_circuits?/modern-deps",
  "ragu_core?/modern-deps",
  "ragu_pasta?/modern-deps",
  "ragu_pcd?/modern-deps",
  "ragu_primitives?/modern-deps",
]
legacy-deps = [
  "ragu_arithmetic?/legacy-deps",
  "ragu_circuits?/legacy-deps",
  "ragu_core?/legacy-deps",
  "ragu_pasta?/legacy-deps",
  "ragu_pcd?/legacy-deps",
  "ragu_primitives?/legacy-deps",
]
multicore = [
  "ragu_arithmetic?/multicore",
  "ragu_circuits?/multicore",
  "ragu_pcd?/multicore",
]
std = []

[lib]
bench = false

# mock dependencies (pulled in only by the `mock` feature)
[dependencies]
blake2b_simd = { workspace = true, optional = true }
ragu_arithmetic = { path = "crates/ragu_arithmetic", version = "0.0.0", default-features = false, features = ["alloc"], optional = true }
ragu_circuits = { path = "crates/ragu_circuits", version = "0.0.0", default-features = false, features = ["alloc"], optional = true }
ragu_core = { path = "crates/ragu_core", version = "0.0.0", default-features = false, features = ["alloc"], optional = true }
ragu_pasta = { path = "crates/ragu_pasta", version = "0.0.0", default-features = false, features = ["alloc", "baked"], optional = true }
ragu_pcd = { path = "crates/ragu_pcd", version = "0.0.0", default-features = false, features = ["alloc"], optional = true }
ragu_primitives = { path = "crates/ragu_primitives", version = "0.0.0", default-features = false, features = ["alloc"], optional = true }

[workspace]
members = [
  "crates/ragu_arithmetic",
  "crates/ragu_circuits",
  "crates/ragu_core",
  "crates/ragu_gadgets",
  "crates/ragu_macros",
  "crates/ragu_pasta",
  "crates/ragu_primitives",
  "crates/ragu_pcd",
  "crates/ragu_testing",
  "qa/crates/lean_extraction",
]

resolver = "2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[workspace.package]
version = "0.0.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/tachyon-zcash/ragu"

[workspace.dependencies]
# Keep the unaliased modern ff/group/pasta_curves/rand entries in sync with
# qa/fuzz/Cargo.toml. The cargo-fuzz workspace is intentionally isolated and
# cannot inherit these workspace dependencies.
ff = { version = "0.14", default-features = false }
group = { version = "0.14", default-features = false }
pasta_curves = { git = "https://github.com/ebfull/pasta_curves", rev = "5a84fc0d13f738f54c43fb1f9e28ecf1d358dcf5", features = ["deferred"] }
rand = "0.10"
rand_core = { version = "0.10", default-features = false }
ff_modern = { package = "ff", version = "0.14", default-features = false }
group_modern = { package = "group", version = "0.14", default-features = false }
pasta_curves_modern = { package = "pasta_curves", git = "https://github.com/ebfull/pasta_curves", rev = "5a84fc0d13f738f54c43fb1f9e28ecf1d358dcf5", features = ["deferred"] }
rand_modern = { package = "rand", version = "0.10", default-features = false, features = ["std_rng"] }
ff_legacy = { package = "ff", version = "0.13", default-features = false }
group_legacy = { package = "group", version = "0.13", default-features = false }
pasta_curves_legacy = { package = "pasta_curves", version = "0.5.1" }
rand_legacy = { package = "rand", version = "0.8", default-features = false, features = ["std_rng"] }
lazy_static = "1.5.0"
proptest = "1.11.0"
gungraun = "0.17.0"
blake2b_simd = { version = "1.0", default-features = false }
maybe-rayon = { git = "https://github.com/tachyon-zcash/maybe-rayon.git", rev = "5c37ee0dd448e8c1edc4529d0b8897ecaff5aad1", default-features = false }
criterion = { version = "0.5", default-features = false }
