[package]
name = "ragu_macros"
version.workspace = true
authors.workspace = true
description = """
Intended for internal use in the Ragu project
"""
license.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ragu_macros"
categories = ["development-tools"]
keywords = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
proc-macro2 = "1.0.95"
num-bigint = "0.4.6"
num-traits = "0.2.19"
proc-macro-crate = "3.3.0"

[dependencies.syn]
version = "2.0.101"
features = ["full"]
# Helpful for debugging:
# features = ["extra-traits"]

[dev-dependencies]

# These are hacks to ensure that these crates are visible to `proc-macro-crate`
# when building doc tests that invoke derive macros inside the derive macro's
# actual documentation. Also, this allows us to have compilation errors if paths
# change where macros are ultimately re-exported downstream.
ff = "0.13"
rand = "0.8"
ragu_arithmetic = { path = "../ragu_arithmetic", version = "0.0.0" }
ragu_circuits = { path = "../ragu_circuits", version = "0.0.0" }
ragu_core = { path = "../ragu_core", version = "0.0.0" }
ragu_pasta = { path = "../ragu_pasta", version = "0.0.0", features = ["baked"] }
ragu_pcd = { path = "../ragu_pcd", version = "0.0.0" }
ragu_primitives = { path = "../ragu_primitives", version = "0.0.0" }
