[package]
name = "ragu_primitives"
version.workspace = true
authors.workspace = true
description = """
Intended for internal use in the Ragu project
"""
license.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ragu_primitives"
categories = [
  "cryptography",
  "mathematics",
  "algorithms",
  "development-tools",
  "no-std",
]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
no-default-features = true
features = ["alloc", "modern-deps"]

[features]
alloc = []
default = ["alloc", "modern-deps"]
legacy-deps = ["ragu_arithmetic/legacy-deps", "ragu_core/legacy-deps"]
modern-deps = ["ragu_arithmetic/modern-deps", "ragu_core/modern-deps"]
std = []
unstable-fuzzing = []

[lib]
bench = false

[dependencies]
ragu_arithmetic = { path = "../ragu_arithmetic", version = "0.0.0", default-features = false, features = ["alloc"] }
ragu_core = { path = "../ragu_core", version = "0.0.0", default-features = false, features = ["alloc"] }
thiserror = "2.0.12"

# Needed for the `Write` derive macro.
ragu_macros = { path = "../ragu_macros", version = "0.0.0" }

[dev-dependencies]
ff = { workspace = true }
rand = { workspace = true }
group = { workspace = true }
ragu_pasta = { path = "../ragu_pasta", version = "0.0.0", features = ["baked"] }
gungraun = { workspace = true }
proptest = { workspace = true }
ragu_testing = { path = "../ragu_testing", version = "0.0.0" }

[[bench]]
name = "primitives"
harness = false
